Fix spacing on the team edit page
The existing version of this page had an unfortunate overlap between the `X` and
the team members name (when listing the team members).

This change add some spacing to prevent the overlap.

--- a/app/assets/stylesheets/_teams-edit.scss
+++ b/app/assets/stylesheets/_teams-edit.scss
@@ -10,6 +10,10 @@ body.teams-edit {
     margin: 0;
     padding: 0;
 
+    .username {
+      margin-left: 1.5em;
+    }
+
     li {
       border: 1px solid $warmgray;
       border-radius: 3px;
